respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Location__c.object
<CustomObject>
    <description>Object used to define locations within given countries. Can be automatically generated from First Steps https://c.eu11.visual.force.com/apex/NEU_First_Steps</description>
    <fields>
        <fullName>Abreviacion__c</fullName>
        <label>Abreviacion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaNielsen__c</fullName>
        <label>Area Nielsen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AREA 1 - NOROESTE</fullName>
                </value>
                <value>
                    <fullName>AREA 2 - NORTE</fullName>
                </value>
                <value>
                    <fullName>AREA 3 - OCCIDENTE</fullName>
                </value>
                <value>
                    <fullName>AREA 4 - BAJÍO</fullName>
                </value>
                <value>
                    <fullName>AREA 5 - CENTRO</fullName>
                </value>
                <value>
                    <fullName>AREA 6 - SUR</fullName>
                </value>
                <value>
                    <fullName>AREA 7 - PENÍNSULA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_digo_Postal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Código Postal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Codigo Postal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Locations (Código Postal)</relationshipLabel>
        <relationshipName>Locations6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Colonia</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Colonia</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Locations (Colonia)</relationshipLabel>
        <relationshipName>Locations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from &quot;Country&quot;</inlineHelpText>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estacion_Cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Registra la clave del número de la estación de salida por la que se trasladan los bienes o mercancías, esto de acuerdo al valor de la columna Clave identificación que permite asociarla al tipo de transporte.</description>
        <inlineHelpText>Registra la clave del número de la estación de salida por la que se trasladan los bienes o mercancías, esto de acuerdo al valor de la columna Clave identificación que permite asociarla al tipo de transporte.</inlineHelpText>
        <label>Estacion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Estaciones</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Estado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Locations (Estados)</relationshipLabel>
        <relationshipName>Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frontera__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frontera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <label>IATA Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Localidad</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Locations (Localidad)</relationshipLabel>
        <relationshipName>Locations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipio_cat_Loc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Locations (Municipio)</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nomenclatura__c</fullName>
        <description>Abreviacion del nombre del Location__c para la ruta consolidada</description>
        <label>Nomenclatura</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pa_s__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>País</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pais</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Locations (País)</relationshipLabel>
        <relationshipName>Locations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pickup_Delivery_Drayage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip Code</label>
        <referenceTo>Delivery_Zone__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Id__c</fullName>
        <formula>State__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNLOCODE__c</fullName>
        <label>UNLOCODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zona_Metropolitana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zona metropolitana padre</description>
        <inlineHelpText>Zona metropolitana padre</inlineHelpText>
        <label>Zona Metropolitana</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone_State__c</fullName>
        <formula>TEXT(State__r.Zone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone(State)</label>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IATA_Code__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Tabasco</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Direcci_n_de_Reparto</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Location__c.Direccion_Reparto</value>
        </filters>
        <label>Dirección de Reparto</label>
    </listViews>
    <listViews>
        <fullName>MEXICO</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Zona_Metropolitana__c</columns>
        <columns>Abreviacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>contains</operation>
            <value>Mexico</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>MEXICO</label>
    </listViews>
    <listViews>
        <fullName>UNITED_STATES</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>UNITED STATES</value>
        </filters>
        <label>UNITED STATES</label>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <recordTypes>
        <fullName>Direccion_Reparto</fullName>
        <active>true</active>
        <description>Dirección de Repartos a partir el Origen</description>
        <label>Dirección de Reparto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>Location Default</description>
        <label>Location</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SinComas</fullName>
        <active>true</active>
        <description>Name sin comas</description>
        <errorConditionFormula>CONTAINS( Name, &quot;,&quot;)</errorConditionFormula>
        <errorMessage>ERROR- Location no puede tener coma</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_State</fullName>
        <active>false</active>
        <errorConditionFormula>( Country__r.Name = &apos;United States&apos; || Country__r.Name = &apos;Mexico&apos; )  &amp;&amp;  State__c == null</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>The field State is required</errorMessage>
    </validationRules>
</CustomObject>